- Auto expand link section

--- a/mail.html
+++ b/mail.html
@@ -60,10 +60,10 @@
 
                 <div class="mdui-card-content">
                     <div class="mdui-panel mdui-panel-gapless" mdui-panel>
-                        <div class="mdui-panel-item mdui-color-blue-grey-700">
+                        <div class="mdui-panel-item mdui-panel-item-open mdui-color-blue-grey-700">
                             <div class="mdui-panel-item-header">
-                                <div class="mdui-panel-item-summary mdui-text-center">按钮无效？点击按钮获取链接<br/>
-                                    Button not working? Press to get direct link
+                                <div class="mdui-panel-item-summary mdui-text-center">按钮无效？复制下方链接到浏览器地址栏访问<br/>
+                                    Button not working? Copy the URL below to your browser's address bar
                                 </div>
                             </div>
                             <div class="mdui-panel-item-body mdui-typo">
